--- a/public/css/flavors.css
+++ b/public/css/flavors.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #fff;
-  color: #333;
+  background-color: #ffffff;
+  color: #333333;
 }
 body,
 p,
@@ -18,30 +18,20 @@ label {
 .clear {
   clear: both;
 }
-#top-veil,
-#bottom-veil {
-  background-color: #fff;
-  opacity: 0.9;
-  left: 0;
-  right: 0;
-  z-index: 2;
-}
-#top-veil {
-  position: fixed;
-  top: 0;
-  height: 210px;
-}
-#bottom-veil {
-  padding: 15px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-}
 .navbar-container {
   position: fixed;
-  padding: 15px;
+  padding: 20px;
   width: 100%;
   z-index: 3;
+}
+.post-nav {
+  position: fixed;
+  top: 75px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow-y: auto;
+  margin: 20px;
 }
 table {
   width: 100%;
@@ -51,9 +41,9 @@ th,
 #song-table-container tr:first-child td {
   text-align: left;
   padding: 0 2px;
-  background: white;
+  background: #ffffff;
   border: none;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #000000;
 }
 td,
 th {
@@ -75,19 +65,19 @@ th {
   width: 400px;
 }
 pre {
-  background-color: #eee;
+  background-color: #eeeeee;
   padding: 10px;
   font-size: 11px;
 }
 a {
-  color: #000;
+  color: #000000;
 }
 a:visited {
-  color: #666;
+  color: #666666;
 }
 a:hover {
-  color: #fff;
-  background-color: #000;
+  color: #ffffff;
+  background-color: #000000;
 }
 .horizontal li {
   display: inline;
@@ -96,6 +86,7 @@ a:hover {
 }
 .tag,
 #song-count-span {
+  border-radius: 4px;
   font-size: 12px;
   font-weight: bold;
   margin-right: 10px;
@@ -115,12 +106,6 @@ a:hover {
 .navbar .export-button {
   margin-top: 14px;
   margin-right: 14px;
-}
-.ui-autocomplete {
-  max-height: 300px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  padding-right: 20px;
 }
 .page {
   padding-top: 20px;
