Fix nav margins blocking text input on songs.pl

--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -21,9 +21,13 @@ label {
 
 .navbar-container {
 	position: fixed;
-	padding: @spacingWide;
+	padding: @spacingWide @spacingWide 0 @spacingWide;
 	width: 100%;
 	z-index: 3;
+
+	.navbar {
+		margin: 0;
+	}
 }
 
 .post-nav {
