--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -66,9 +66,11 @@ th {
 }
 
 .rating {
-  font-family: courier;
-  font-size: 18px;
+	font-family: courier;
+	font-size: 18px;
 	white-space: nowrap;
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .slider {
