Touch up collections styles

--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -65,13 +65,11 @@
 	}
 
 	.mix {
-		@size: 65px;
-
-		width: @size;
-		height: @size;
+		width: @albumSize;
+		height: @albumSize;
 		padding: @spacingNarrow;
 		text-align: center;
-		font-size: 9px;
+		font-size: 10px;
 		line-height: 11px;
 	}
 }
