--- a/public/css/imports.less
+++ b/public/css/imports.less
@@ -14,6 +14,10 @@
 @greyLightest: #eee;
 @white: #fff;
 
+@updateInProgressColor: #ffc;
+
+@backgroundColor: @white;
+
 .clickable() {
 	cursor: pointer;
 }
