--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -62,6 +62,10 @@
 		td {
 			border: none;
 
+			&[contenteditable="true"] {
+				cursor: pointer;
+			}
+
 			&:first-child {	// ID column
 				display: none;
 			}
