--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -19,6 +19,10 @@ label {
 	clear: both;
 }
 
+.subtle {
+	color: @grey;
+}
+
 .navbar-container {
 	position: fixed;
 	padding: @spacingWide @spacingWide 0 @spacingWide;
@@ -59,6 +63,13 @@ td, th {
   margin: 1px;
   padding: 2px 5px;
 	vertical-align: top;
+}
+
+input[type="text"] {
+	height: 35px;
+	border: 1px solid #ccc;
+	border-radius: @borderRadius;
+	padding: 5px;
 }
 
 th {
