Remove collections from well one at a time, instead of with 'Clear' button

--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -124,6 +124,12 @@
 		li {
 			margin: 0;
 			padding: 0 0 @spacingNormal 0;
+			line-height: 25px;
+
+			.glyphicon {
+				margin-left: 5px;
+				.clickable();
+			}
 		}
 	}
 }
