Use varied icons on collections page

--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -84,6 +84,10 @@
 				}
 			}
 
+			&.rating .glyphicon {
+				margin-left: -4px;	// cram icons together horizontally
+			}
+
 			&.name {
 				border-left: none;
 			}
