fix accidentally dropped styles on songs page

--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -40,6 +40,10 @@
 	top: 200px;
 
 	input {
+		height: 35px;
+		border: 1px solid #ccc;
+		border-radius: @borderRadius;
+		padding: 5px;
 		margin: 5px 0;
 		float: left;
 	}
