--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -66,7 +66,7 @@ td, th {
 }
 
 input[type="text"] {
-	height: 35px;
+	height: @inputHeight;
 	border: 1px solid #ccc;
 	border-radius: @borderRadius;
 	padding: 5px;
