--- a/public/css/imports.less
+++ b/public/css/imports.less
@@ -1,9 +1,11 @@
 @fontSizeDefault: 12px;
+@fontSizeLarge: 18px;
 
 @spacingNarrow: 5px;
 @spacingNormal: 10px;
 @spacingWide: 20px;
 
+@inputHeight: 35px;
 @navHeight: 75px;
 
 @borderRadius: 4px;
