--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -40,7 +40,7 @@
 	top: 200px;
 
 	input {
-		height: 35px;
+		height: @inputHeight;
 		border: 1px solid #ccc;
 		border-radius: @borderRadius;
 		padding: 5px;
