--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -80,7 +80,7 @@ th {
 
 .rating {
 	font-family: courier;
-	font-size: 18px;
+	font-size: @fontSizeLarge;
 	white-space: nowrap;
 	display: inline-block;
 	vertical-align: middle;
@@ -100,7 +100,6 @@ th {
 pre {
   background-color: @greyLightest;
   padding: @spacingNormal;
-  font-size: 11px;
 }
 
 a { color: @black; }
@@ -115,7 +114,6 @@ a:hover { color: @white; background-color: @black; }
 
 .tag, #song-count-span {
 	border-radius: @borderRadius;
-	font-size: 12px;
 	font-weight: bold;
 	margin-right: @spacingNormal;
 	margin-bottom: @spacingNormal;
