--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -58,16 +58,24 @@
 	overflow-y: auto;
 
 	table {
+		tr:nth-child(odd) {
+			background-color: @white;
+		}
+
+		tr:nth-child(even) {
+			background-color: @stripe;
+		}
+
+		tr:hover {
+			background-color: #dfeffa;
+		}
+
 		td {
 			border: none;
 			max-width: 200px;	// hacky way to fiddle with column widths
 
 			&[contenteditable="true"] {
 				cursor: pointer;
-			}
-
-			&:first-child {	// ID column
-				display: none;
 			}
 
 			&.isstarred {
@@ -88,16 +96,8 @@
 			}
 
 			&.rating .glyphicon {
-				margin-left: -4px;	// cram icons together horizontally
+				margin-left: -1px;	// cram icons together horizontally
 			}
-
-			&.name {
-				border-left: none;
-			}
-		}
-
-		.google-visualization-table-tr-head {
-			display: none;
 		}
 	}
 }
