--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -100,9 +100,9 @@ pre {
   padding: @spacingNormal;
 }
 
-a { color: @black; }
-a:visited { color: @greyDark; }
-a:hover { color: @white; background-color: @black; }
+a { color: @greyBlue; }
+a:visited { color: @greyBlue; }
+a:hover { color: @white; background-color: @greyBlue; }
 
 .horizontal li {
 	display: inline;
