Fix complex filter, though it still isn't pretty

--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -111,7 +111,7 @@
 	}
 }
 
-#helpers {
+#complex-filter {
 	display: none;
 
 	.modal-body {
@@ -129,10 +129,6 @@
 			margin-right: 25px;
 		}
 	}
-}
-
-#helpers-trigger {
-	cursor: pointer;
 }
 
 #top-veil, #bottom-veil {
