Icons to refresh or clear complex filter

--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -96,9 +96,9 @@ pre {
   padding: @spacingNormal;
 }
 
-a { color: @greyBlue; }
-a:visited { color: @greyBlue; }
-a:hover { color: @white; background-color: @greyBlue; }
+a { color: @linkColor; }
+a:visited { color: @linkColor; }
+a:hover { color: @white; background-color: @linkColor; }
 
 .horizontal li {
 	display: inline;
