Fix dimmed icons missing on page load

--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -98,8 +98,11 @@
 				}
 			}
 
-			&.rating .glyphicon {
-				margin-left: -1px;	// cram icons together horizontally
+			&.rating {
+				width: @fontSizeDefault * 5 + @spacingNarrow * 2;
+				.glyphicon {
+					margin-left: -1px;	// cram icons together horizontally
+				}
 			}
 		}
 	}
