Clean up styles

--- a/public/css/categories.less
+++ b/public/css/categories.less
@@ -37,10 +37,12 @@
 
 .category {
 	border: 1px @greyBlue solid;
+	border-radius: @borderRadius;
 	margin: @spacingNormal;
 	padding: @spacingNormal;
 	float: left;
 	text-align: center;
+	width: 20%;
 }
 
 .category-tags {
@@ -49,3 +51,6 @@
 	overflow-y: auto;
 }
 
+.uncategorized {
+	text-align: center;
+}
