Save complex filter history

--- a/public/css/songs.less
+++ b/public/css/songs.less
@@ -123,7 +123,15 @@
 
 	#column-hints {
 		line-height: 1.5;
-		margin-bottom: @spacingWide;
+	}
+
+	.playlists {
+		list-style-type: none;
+		line-height: 2;
+		.glyphicon {
+			color: @greyLight;
+			cursor: pointer;
+		}
 	}
 
 	textarea, input {
