Fix missing ratings showing as five-star ratings on collections.pl

--- a/public/css/collections.less
+++ b/public/css/collections.less
@@ -24,11 +24,15 @@
 			padding: @spacingNormal @spacingNormal 0 @spacingNormal;
 	
 			.details {
-				*:not(.name) {
-					color: @grey;
-				}
+				color: @grey;
 				.name, .artist {
 					.ellipsis();
+				}
+				.name {
+					color: @defaultFontColor;
+				}
+				.rating .blank {
+					display: none;
 				}
 				.export-icons {
 					float: right;
