show spinner until page finishes loading

--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -156,3 +156,32 @@ td.update-in-progress {
 #initial-page-data {
 	display: none;
 }
+
+#loading {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	opacity: 0.8;
+	background-color: @black;
+	z-index: 1000;
+	> div {
+		@size: 32px;
+		@padding: 8px;
+		position: fixed;
+		top: calc(~'50% - ' @size / 2 - @padding);
+		left: calc(~'50% - ' @size / 2 - @padding);
+		background-color: @white;
+		opacity: 1;
+		padding: @padding;
+		width: @size + @padding * 2;
+		height: @size + @padding * 2;
+		border-radius: @borderRadius;
+		> div {
+			width: @size;
+			height: @size;
+			background-image: url(../images/spinner.gif);
+		}
+	}
+}
