Add graphs: distributions by rating, energy, and mood

--- a/public/css/flavors.less
+++ b/public/css/flavors.less
@@ -6,6 +6,10 @@ body {
 }
 
 body, p, ol, ul, td, th {
+  	-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+			  box-sizing: border-box;
+
   font-family: helvetica, arial, sans-serif;
   font-size: @fontSizeDefault;
   line-height: 15px;
