label viz with icons

--- a/public/css/data.less
+++ b/public/css/data.less
@@ -9,6 +9,12 @@
 		width: 30%;
 		display: inline-block;
 		padding: @spacingWide;
+
+		.glyphicon {
+			font-size: 32px;
+			z-index: -1;
+			color: @greyLight;
+		}
 	
 		svg {
 			margin: @spacingNormal;
