add button to data.pl to clear selections

--- a/public/css/data.less
+++ b/public/css/data.less
@@ -15,6 +15,13 @@
 .post-nav {
 	text-align: center;
 
+	.clear-button {
+		color: @greyLight;
+		position: absolute;
+		top: 0;
+		right: 0;
+	}
+
 	.rating-container {
 		width: 30%;
 		display: inline-block;
